--- a/.github/workflows/cp-pipeline-ci-reusable.yml
+++ b/.github/workflows/cp-pipeline-ci-reusable.yml
@@ -2,7 +2,14 @@ name: Pipeline Manager
 
 on:
   workflow_call:
-
+    secrets:
+      GITHUB_TOKEN:
+        required: true
+      HELM_REPO_PAT:
+        required: true
+      DAGGER_CLOUD_TOKEN:
+        required: true
+        
 permissions:
   contents: write # to be able to publish a GitHub release
   issues: write # to be able to comment on released issues
