--- a/.github/workflows/cp-pipeline-ci-reusable.yml
+++ b/.github/workflows/cp-pipeline-ci-reusable.yml
@@ -33,13 +33,14 @@ jobs:
         with:
           module: github.com/BCIT-LTC/daggerverse/pipeline-manager
           call: >-
-            run 
-            --source=. 
-            --github_token=env://GITHUB_TOKEN  
+            run
+            --source=.
+            --github_token=env://GITHUB_TOKEN
             --helm_repo_pat=env://HELM_REPO_PAT
-            --username=${{ github.actor }} 
-            --branch=${{ github.ref_name }} 
-            --commit_hash=$(echo $GITHUB_SHA | cut -c1-7) 
+            --username=${{ github.actor }}
+            --app_name=${{ github.event.repository.name }}
+            --branch=${{ github.ref_name }}
+            --commit_hash=$(echo $GITHUB_SHA | cut -c1-7)
             --registry_path=ghcr.io/${{ github.repository }}
             --repository_url=${{ github.server_url }}/${{ github.repository }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
