--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -9,10 +9,7 @@ on:
         required: true
 
 permissions:
-  contents: write
-  packages: write
-  id-token: write
-  attestations: write
+  contents: read
 
 env:
   IMAGE_REPOSITORY: ghcr.io/${{ github.repository }}
@@ -70,12 +67,11 @@ jobs:
 
   build-and-push-app-image:
     runs-on: ubuntu-latest
-    needs: get-version
     permissions:
       contents: read
       packages: write
       id-token: write
-      attestations: write
+    needs: get-version
     env:
       IS_RELEASE: ${{ needs.get-version.outputs.is_release }}
       APP_VERSION: ${{ needs.get-version.outputs.version }}
@@ -130,17 +126,11 @@ jobs:
           DIGEST: ${{ steps.build.outputs.digest }}
         run: cosign sign --yes "${IMAGE}@${DIGEST}"
 
-      # - uses: actions/attest-build-provenance@v2
-      #   with:
-      #     subject-name: ${{ env.IMAGE }}
-      #     subject-digest: ${{ steps.build.outputs.digest }}
-      #     push-to-registry: true
-
   # Trigger helm-charts repo remote-bump workflow to update chart version
   dispatch-helm-charts:
+    runs-on: ubuntu-latest
     needs: [get-version]
     if: ${{ needs.get-version.outputs.version != '' }}
-    runs-on: ubuntu-latest
     steps:
 
       # Generate token to trigger remote workflow
