Update semantic-release image for workflow

--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -9,36 +9,43 @@ on:
         required: true
 
 permissions:
-  contents: read
+  contents: write
+  pull-requests: write
+  issues: write
 
 env:
   IMAGE_REPOSITORY: ghcr.io/${{ github.repository }}
 
 jobs:
-
   get-version:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    container:
+      image: ghcr.io/bcit-ltc/semantic-release:latest
     outputs:
       image: ${{ steps.vars.outputs.image }}
       is_release: ${{ steps.vars.outputs.is_release }}
       version: ${{ steps.vars.outputs.version }}
-
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           lfs: true
-
-      - name: Run Semantic Release
+      - name: Mark repo as safe for git
+        run: |
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+      - name: Run Semantic Release Wrapper
         id: semrel
-        uses: docker://ghcr.io/bcit-ltc/semantic-release:latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          plugins: |
-            ['@semantic-release/commit-analyzer', '@semantic-release/release-notes-generator', '@semantic-release/github']
+        run: |
+          /usr/local/bin/semantic-release-wrapper.sh \
+            --branches main \
+            --tag-format "\${version}" \
+            --plugins @semantic-release/commit-analyzer,@semantic-release/release-notes-generator,@semantic-release/github | tee output.log
+          IS_RELEASE=$(grep IS_RELEASE output.log | cut -d= -f2)
+          RELEASE_VERSION=$(grep RELEASE_VERSION output.log | cut -d= -f2)
+          echo "is_release=$IS_RELEASE" >> $GITHUB_OUTPUT
+          echo "release_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
 
       - name: Compute version
         id: vars
@@ -48,15 +55,11 @@ jobs:
           IMAGE="${IMAGE_REPOSITORY,,}"
           SHORT_SHA="${GITHUB_SHA::7}"
           TS="$(date -u +%Y%m%d%H%M%S)"
-
-          # From semantic-release
-          IS_RELEASE="${{ steps.semrel.outputs.new-release-published || 'false' }}"
-          RELEASE_VERSION="${{ steps.semrel.outputs.release-version || '' }}"
-
+          IS_RELEASE="${{ steps.semrel.outputs.is_release }}"
+          RELEASE_VERSION="${{ steps.semrel.outputs.release_version }}"
           if [[ "${IS_RELEASE}" == "true" && -n "${RELEASE_VERSION}" ]]; then
             VERSION="${RELEASE_VERSION}"
           else
-            # Base = latest tag (without 'v' prefix) or 0.0.0
             RAW="$(git describe --tags --abbrev=0 2>/dev/null || true)"
             BASE="${RAW#v}"; [[ -z "${BASE}" ]] && BASE="0.0.0"
             VERSION="${BASE}-rc.${SHORT_SHA}.${TS}"
@@ -80,9 +83,12 @@ jobs:
       APP_VERSION: ${{ needs.get-version.outputs.version }}
       IMAGE: ${{ needs.get-version.outputs.image }}
     steps:
-
+      - name: Debug get-version outputs
+        run: |
+          echo "IS_RELEASE=${{ needs.get-version.outputs.is_release }}"
+          echo "APP_VERSION=${{ needs.get-version.outputs.version }}"
+          echo "IMAGE=${{ needs.get-version.outputs.image }}"
       - uses: actions/checkout@v4
-
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -116,7 +122,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           annotations: ${{ steps.meta.outputs.annotations }}
-          provenance: true    # or could use `attest-build-provenance`` step below
+          provenance: true # or could use `attest-build-provenance`` step below
           sbom: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -135,7 +141,7 @@ jobs:
     needs: [get-version]
     if: ${{ needs.get-version.outputs.version != '' }}
     steps:
-
+      
       # Generate token to trigger remote workflow
       - id: app-token
         uses: actions/create-github-app-token@v1
@@ -151,7 +157,7 @@ jobs:
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
           CHART: ${{ github.event.repository.name }}
-          VER:   ${{ needs.get-version.outputs.version }}
+          VER: ${{ needs.get-version.outputs.version }}
         run: |
           set -euo pipefail
           gh workflow run remote-bump.yaml \
