--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -9,7 +9,7 @@ on:
         required: true
 
 permissions:
-  contents: write
+  contents: read
   pull-requests: write
   issues: write
 
@@ -17,35 +17,30 @@ env:
   IMAGE_REPOSITORY: ghcr.io/${{ github.repository }}
 
 jobs:
+
   get-version:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/bcit-ltc/semantic-release:latest
+    permissions:
+      contents: write
     outputs:
       image: ${{ steps.vars.outputs.image }}
       is_release: ${{ steps.vars.outputs.is_release }}
       version: ${{ steps.vars.outputs.version }}
+
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           lfs: true
-      - name: Mark repo as safe for git
-        run: |
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
-      - name: Run Semantic Release Wrapper
+
+      - name: Run Semantic Release
         id: semrel
+        uses: docker://ghcr.io/bcit-ltc/semantic-release@sha-6ba64a5df332130d98182e3aee931ec84aa35604
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          /usr/local/bin/semantic-release-wrapper.sh \
-            --branches main \
-            --tag-format "\${version}" \
-            --plugins @semantic-release/commit-analyzer,@semantic-release/release-notes-generator,@semantic-release/github | tee output.log
-          IS_RELEASE=$(grep IS_RELEASE output.log | cut -d= -f2)
-          RELEASE_VERSION=$(grep RELEASE_VERSION output.log | cut -d= -f2)
-          echo "is_release=$IS_RELEASE" >> $GITHUB_OUTPUT
-          echo "release_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
+        with:
+          plugins: |
+            ['@semantic-release/commit-analyzer', '@semantic-release/release-notes-generator', '@semantic-release/github']
 
       - name: Compute version
         id: vars
@@ -55,11 +50,15 @@ jobs:
           IMAGE="${IMAGE_REPOSITORY,,}"
           SHORT_SHA="${GITHUB_SHA::7}"
           TS="$(date -u +%Y%m%d%H%M%S)"
-          IS_RELEASE="${{ steps.semrel.outputs.is_release }}"
-          RELEASE_VERSION="${{ steps.semrel.outputs.release_version }}"
+
+          # From semantic-release
+          IS_RELEASE="${{ steps.semrel.outputs.new-release-published || 'false' }}"
+          RELEASE_VERSION="${{ steps.semrel.outputs.release-version || '' }}"
+
           if [[ "${IS_RELEASE}" == "true" && -n "${RELEASE_VERSION}" ]]; then
             VERSION="${RELEASE_VERSION}"
           else
+            # Base = latest tag (without 'v' prefix) or 0.0.0
             RAW="$(git describe --tags --abbrev=0 2>/dev/null || true)"
             BASE="${RAW#v}"; [[ -z "${BASE}" ]] && BASE="0.0.0"
             VERSION="${BASE}-rc.${SHORT_SHA}.${TS}"
@@ -83,12 +82,9 @@ jobs:
       APP_VERSION: ${{ needs.get-version.outputs.version }}
       IMAGE: ${{ needs.get-version.outputs.image }}
     steps:
-      - name: Debug get-version outputs
-        run: |
-          echo "IS_RELEASE=${{ needs.get-version.outputs.is_release }}"
-          echo "APP_VERSION=${{ needs.get-version.outputs.version }}"
-          echo "IMAGE=${{ needs.get-version.outputs.image }}"
+
       - uses: actions/checkout@v4
+
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -122,7 +118,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           annotations: ${{ steps.meta.outputs.annotations }}
-          provenance: true # or could use `attest-build-provenance`` step below
+          provenance: true    # or could use `attest-build-provenance`` step below
           sbom: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -141,7 +137,7 @@ jobs:
     needs: [get-version]
     if: ${{ needs.get-version.outputs.version != '' }}
     steps:
-      
+
       # Generate token to trigger remote workflow
       - id: app-token
         uses: actions/create-github-app-token@v1
