--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -10,8 +10,8 @@ on:
 
 permissions:
   contents: read
-  # pull-requests: write
-  # issues: write
+  pull-requests: write
+  issues: write
 
 env:
   IMAGE_REPOSITORY: ghcr.io/${{ github.repository }}
