--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -92,6 +92,9 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Write VERSION file for build
+        run: echo "${APP_VERSION}" > VERSION
+
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
