--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -2,11 +2,42 @@ name: Build and push app/chart images
 
 on:
   workflow_call:
+    inputs:
+      # ---- CDN (optional, opt-in) ----
+      cdn_enabled:
+        description: "Enable CDN asset rewrite + upload"
+        required: false
+        type: boolean
+        default: false
+      cdn_account_name:
+        description: "Azure Storage account name for CDN"
+        required: false
+        type: string
+      cdn_container:
+        description: "Azure Storage container name (e.g., 'cdn')"
+        required: false
+        type: string
+      cdn_base_url:
+        description: "Base URL for the storage endpoint (e.g. https://account.blob.core.windows.net/)"
+        required: false
+        type: string
+      cdn_namespace:
+        description: "Namespace under the container (e.g. 'bcit-ltc')"
+        required: false
+        type: string
+      cdn_asset_exts:
+        description: "Comma-separated asset extensions for versioning & rewrite (no dots)"
+        required: false
+        type: string
+        default: "jpg,png,js,css,ico"
     secrets:
       ORG_HELM_CHART_UPDATER_ID:
         required: true
       ORG_HELM_CHART_UPDATER_PRIVATE_KEY:
         required: true
+      # Optional: required only if CDN is enabled
+      CDN_SAS_TOKEN:
+        required: false
     outputs:
       app_version:
         description: "Computed app version from semantic-release"
@@ -23,6 +54,7 @@ env:
 
 jobs:
 
+  # 1. Compute version & base image name
   get-version:
     runs-on: ubuntu-latest
     permissions:
@@ -84,19 +116,21 @@ jobs:
             echo "version=${VERSION}"
           } | tee -a "$GITHUB_OUTPUT"
 
-  build-and-push-app-image:
+  # 2. Build the image locally (no push yet)
+  build-app-image:
     runs-on: ubuntu-latest
+    needs: get-version
     permissions:
       contents: read
       packages: write
       id-token: write
-    needs: get-version
     env:
       IS_RELEASE: ${{ needs.get-version.outputs.is_release }}
       APP_VERSION: ${{ needs.get-version.outputs.version }}
       IMAGE: ${{ needs.get-version.outputs.image }}
+    outputs:
+      tags: ${{ steps.meta.outputs.tags }}
     steps:
-
       - uses: actions/checkout@v4
 
       - name: Write VERSION file for build
@@ -124,34 +158,324 @@ jobs:
           flavor: |
             latest=true
 
-      - uses: docker/build-push-action@v6
+      - name: Build image (no push, load into local Docker)
         id: build
         env:
           DOCKER_BUILD_RECORD_UPLOAD: false
           DOCKER_BUILD_SUMMARY: false
+        uses: docker/build-push-action@v6
         with:
           context: .
-          push: true
+          push: false
+          load: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           annotations: ${{ steps.meta.outputs.annotations }}
-          provenance: true    # or could use `attest-build-provenance`` step below
+          provenance: false
           sbom: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # Sign images to ensure authenticity
+  # 3. (Optional) CDN asset versioning + in-image rewrite + upload to Azure
+  cdn-rewrite-and-upload:
+    runs-on: ubuntu-latest
+    needs: [get-version, build-app-image]
+    if: ${{ inputs.cdn_enabled == true }}
+    env:
+      APP_VERSION: ${{ needs.get-version.outputs.version }}
+      IMAGE: ${{ needs.get-version.outputs.image }}
+      CDN_ACCOUNT_NAME: ${{ inputs.cdn_account_name }}
+      CDN_CONTAINER: ${{ inputs.cdn_container }}
+      CDN_BASE_URL: ${{ inputs.cdn_base_url }}
+      CDN_NAMESPACE: ${{ inputs.cdn_namespace }}
+      ASSET_EXTS: ${{ inputs.cdn_asset_exts }}
+    steps:
+      - name: Validate CDN configuration
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          if [[ -z "${CDN_ACCOUNT_NAME:-}" || -z "${CDN_CONTAINER:-}" || -z "${CDN_BASE_URL:-}" || -z "${CDN_NAMESPACE:-}" ]]; then
+            echo "CDN is enabled but one or more CDN_* inputs are missing."
+            echo "CDN_ACCOUNT_NAME=${CDN_ACCOUNT_NAME:-<empty>}"
+            echo "CDN_CONTAINER=${CDN_CONTAINER:-<empty>}"
+            echo "CDN_BASE_URL=${CDN_BASE_URL:-<empty>}"
+            echo "CDN_NAMESPACE=${CDN_NAMESPACE:-<empty>}"
+            echo "Skipping CDN rewrite/upload."
+            exit 0
+          fi
+
+          if [[ -z "${ASSET_EXTS:-}" ]]; then
+            echo "ASSET_EXTS is empty; using default jpg,png,js,css,ico"
+            echo "ASSET_EXTS=jpg,png,js,css,ico" >> "$GITHUB_ENV"
+          fi
+
+      - name: Show local image
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "Local images for ${IMAGE}:"
+          docker images "${IMAGE}"
+
+      - name: Extract static files from runtime image
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          RUNTIME_STATIC_ROOT="/usr/share/nginx/html"
+
+          CID="$(docker create "${IMAGE}:${APP_VERSION}")"
+          mkdir -p site
+          docker cp "${CID}:${RUNTIME_STATIC_ROOT}/." site
+          echo "Extracted static files from ${RUNTIME_STATIC_ROOT} into ./site"
+          ls -R site || true
+
+          echo "CID=${CID}" >> "$GITHUB_ENV"
+
+      - name: Compute CDN asset version
+        id: cdn_asset_version
+        shell: bash
+        env:
+          ASSET_EXTS: ${{ env.ASSET_EXTS }}
+        run: |
+          set -euo pipefail
+
+          SRC_DIR="site"
+          ASSET_EXTS="${ASSET_EXTS}"
+
+          echo "Using asset extensions for versioning: ${ASSET_EXTS}"
+
+          FIND_EXPR=""
+          OLD_IFS="$IFS"
+          IFS=','
+          for ext in $ASSET_EXTS; do
+            ext_trim="$(printf '%s' "$ext" | xargs)"
+            [ -z "${ext_trim}" ] && continue
+            if [ -z "${FIND_EXPR}" ]; then
+              FIND_EXPR="-name '*.${ext_trim}'"
+            else
+              FIND_EXPR="${FIND_EXPR} -o -name '*.${ext_trim}'"
+            fi
+          done
+          IFS="$OLD_IFS"
+
+          if [ -z "${FIND_EXPR}" ]; then
+            echo "No valid asset extensions in ASSET_EXTS; using fallback CDN asset version." >&2
+            VERSION="noassets000000"
+            echo "cdn_asset_version=${VERSION}" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          ASSET_FILES="$(
+            eval "find \"${SRC_DIR}\" -type f \\( ${FIND_EXPR} \\) -print0" | tr '\0' '\n' || true
+          )"
+
+          if [ -z "${ASSET_FILES}" ]; then
+            echo "No matching asset files in ${SRC_DIR}; using fallback CDN asset version." >&2
+            VERSION="noassets000000"
+            echo "cdn_asset_version=${VERSION}" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          HASH="$(
+            eval "find \"${SRC_DIR}\" -type f \\( ${FIND_EXPR} \\) -print0" \
+              | sort -z \
+              | xargs -0 sha256sum \
+              | sha256sum \
+              | cut -c1-12
+          )"
+
+          echo "Computed CDN asset version from assets: ${HASH}"
+          echo "cdn_asset_version=${HASH}" >> "$GITHUB_OUTPUT"
+
+      - name: Rewrite HTML asset URLs for CDN (Perl-based, in extracted site)
+        shell: bash
+        env:
+          CDN_ASSET_VERSION: ${{ steps.cdn_asset_version.outputs.cdn_asset_version }}
+          CDN_BASE_URL: ${{ env.CDN_BASE_URL }}
+          CDN_CONTAINER: ${{ env.CDN_CONTAINER }}
+          CDN_NAMESPACE: ${{ env.CDN_NAMESPACE }}
+          ASSET_EXTS: ${{ env.ASSET_EXTS }}
+        run: |
+          set -euo pipefail
+
+          if [ -z "${CDN_ASSET_VERSION}" ]; then
+            echo "CDN_ASSET_VERSION is empty; skipping rewrite." >&2
+            exit 0
+          fi
+
+          if [ -z "${CDN_BASE_URL}" ] || [ -z "${CDN_CONTAINER}" ]; then
+            echo "CDN_BASE_URL or CDN_CONTAINER is not set; skipping rewrite." >&2
+            exit 0
+          fi
+
+          APP_NAME="${{ github.event.repository.name }}"
+          CDN_PREFIX="${CDN_BASE_URL%/}/${CDN_CONTAINER}/${CDN_NAMESPACE}/${APP_NAME}/${CDN_ASSET_VERSION}"
+
+          EXT_PATTERN="$(printf '%s' "${ASSET_EXTS}" | tr -d '[:space:]' | sed 's/,/|/g')"
+
+          if [ -z "${EXT_PATTERN}" ]; then
+            echo "No valid extensions in ASSET_EXTS; skipping rewrite." >&2
+            exit 0
+          fi
+
+          echo "Rewriting HTML assets to CDN prefix: ${CDN_PREFIX}"
+          echo "Matching extensions: ${ASSET_EXTS}"
+
+          export CDN_PREFIX EXT_PATTERN
+
+          find site -type f -name '*.html' -print0 |
+            while IFS= read -r -d '' f; do
+              perl -0pi -e '
+                my $cdn  = $ENV{CDN_PREFIX}  // "";
+                my $exts = $ENV{EXT_PATTERN} // "";
+                exit 0 unless $cdn && $exts;
+
+                my $pat = qr{(src|href|data-src)=([\"\'])([^\"\']+\.($exts)(?:[#?][^\"\']*)?)\2}i;
+
+                s{$pat}{
+                  my ($attr, $q, $path) = ($1, $2, $3);
+
+                  if ($path =~ m{^(?:[a-zA-Z][a-zA-Z0-9+.+-]*:|//)}) {
+                    "$attr=$q$path$q";
+                  } else {
+                    my $p = $path;
+
+                    $p =~ s{^\./}{};
+                    $p =~ s{^/+}{};
+                    $p =~ s{^(?:\.\./)+}{};
+
+                    "$attr=$q$cdn/$p$q";
+                  }
+                }eg;
+              ' "$f"
+            done
+
+      - name: Copy rewritten site back into container and commit
+        shell: bash
+        env:
+          CID: ${{ env.CID }}
+        run: |
+          set -euo pipefail
+          if [ -z "${CID:-}" ]; then
+            echo "No container ID found; cannot commit rewritten site." >&2
+            exit 1
+          fi
+
+          RUNTIME_STATIC_ROOT="/usr/share/nginx/html"
+
+          echo "Copying rewritten site back into container ${CID}:${RUNTIME_STATIC_ROOT}"
+          docker cp site/. "${CID}:${RUNTIME_STATIC_ROOT}"
+
+          echo "Committing container ${CID} to ${IMAGE}:${APP_VERSION}"
+          docker commit "${CID}" "${IMAGE}:${APP_VERSION}"
+
+          docker rm "${CID}"
+
+      - name: Upload assets to CDN
+        uses: azure/CLI@v2
+        env:
+          SAS_TOKEN: ${{ secrets.CDN_SAS_TOKEN }}
+          CDN_ACCOUNT_NAME: ${{ env.CDN_ACCOUNT_NAME }}
+          CDN_CONTAINER: ${{ env.CDN_CONTAINER }}
+          CDN_NAMESPACE: ${{ env.CDN_NAMESPACE }}
+          CDN_ASSET_VERSION: ${{ steps.cdn_asset_version.outputs.cdn_asset_version }}
+          ASSET_EXTS: ${{ env.ASSET_EXTS }}
+        with:
+          inlineScript: |
+            set -euo pipefail
+
+            if [ -z "${SAS_TOKEN:-}" ] || [ -z "${CDN_ACCOUNT_NAME:-}" ] || [ -z "${CDN_CONTAINER:-}" ]; then
+              echo "CDN upload config incomplete (missing SAS_TOKEN/CDN_ACCOUNT_NAME/CDN_CONTAINER); skipping upload."
+              exit 0
+            fi
+
+            SRC_DIR="site"
+            if [ ! -d "${SRC_DIR}" ]; then
+              echo "No site dir ${SRC_DIR}; nothing to upload." >&2
+              exit 0
+            fi
+
+            CDN_NAMESPACE="${CDN_NAMESPACE}"
+            APP_NAME="${{ github.event.repository.name }}"
+            CDN_ASSET_VERSION="${CDN_ASSET_VERSION}"
+            ASSET_EXTS="${ASSET_EXTS}"
+
+            PREFIX="${CDN_NAMESPACE}/${APP_NAME}/${CDN_ASSET_VERSION}"
+
+            echo "Uploading assets from ${SRC_DIR} to container ${CDN_CONTAINER} at prefix ${PREFIX}"
+            echo "Using asset extensions: ${ASSET_EXTS}"
+
+            OLD_IFS="$IFS"
+            IFS=','
+            for ext in $ASSET_EXTS; do
+              ext_trim="$(printf '%s' "$ext" | xargs)"
+              [ -z "${ext_trim}" ] && continue
+              pattern="*.${ext_trim}"
+              echo "  - Uploading assets matching pattern: ${pattern}"
+              az storage blob upload-batch \
+                --account-name "${CDN_ACCOUNT_NAME}" \
+                --sas-token "${SAS_TOKEN}" \
+                --destination "${CDN_CONTAINER}" \
+                --destination-path "${PREFIX}" \
+                --source "${SRC_DIR}" \
+                --pattern "${pattern}" \
+                --overwrite true \
+                --content-cache-control "public, max-age=31536000, immutable"
+            done
+            IFS="$OLD_IFS"
+            echo "CDN upload complete."
+
+  # 4. Push the final image (rewritten if CDN ran), then sign
+  push-and-sign-image:
+    runs-on: ubuntu-latest
+    needs: [get-version, build-app-image, cdn-rewrite-and-upload]
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+    env:
+      APP_VERSION: ${{ needs.get-version.outputs.version }}
+      IMAGE: ${{ needs.get-version.outputs.image }}
+      IMAGE_TAGS: ${{ needs.build-app-image.outputs.tags }}
+    steps:
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Show tags to push
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "Image tags to push:"
+          printf '%s\n' ${IMAGE_TAGS}
+
+      - name: Push all tags
+        shell: bash
+        run: |
+          set -euo pipefail
+          for tag in ${IMAGE_TAGS}; do
+            echo "Pushing ${tag}"
+            docker push "${tag}"
+          done
+
       - uses: sigstore/cosign-installer@v3
 
-      - name: Cosign sign (keyless, by digest)
-        env:
-          DIGEST: ${{ steps.build.outputs.digest }}
-        run: cosign sign --yes "${IMAGE}@${DIGEST}"
+      - name: Cosign sign by tag
+        shell: bash
+        run: |
+          set -euo pipefail
+          for tag in ${IMAGE_TAGS}; do
+            echo "Signing ${tag}"
+            cosign sign --yes "${tag}"
+          done
 
-  # Trigger helm-charts repo remote-bump workflow to update chart version
+  # 5. Trigger helm-charts repo remote-bump workflow to update chart version
   dispatch-helm-charts:
     runs-on: ubuntu-latest
-    needs: [get-version]
+    needs: [push-and-sign-image, get-version]
     if: ${{ needs.get-version.outputs.version != '' }}
     steps:
 
