--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -294,14 +294,22 @@ jobs:
           echo "Rewriting HTML assets to CDN prefix: ${CDN_PREFIX}"
           echo "Matching extensions: ${ASSET_EXTS}"
 
-          export CDN_PREFIX EXT_PATTERN
-
-          # For each HTML file, rewrite asset URLs to use the CDN prefix if they match the configured extensions
+          # For each HTML file, rewrite asset URLs relative to that file's directory
           find site -type f -name '*.html' -print0 |
             while IFS= read -r -d '' f; do
+              # Directory of this HTML file relative to site/ (e.g. "multimedia/_SOH/3DBirth")
+              rel="${f#site/}"
+              rel_dir="$(dirname "$rel")"
+
+              CDN_PREFIX_ENV="${CDN_PREFIX}"
+              EXT_PATTERN_ENV="${EXT_PATTERN}"
+              HTML_DIR_ENV="${rel_dir}"
+
+              CDN_PREFIX="$CDN_PREFIX_ENV" EXT_PATTERN="$EXT_PATTERN_ENV" HTML_DIR="$HTML_DIR_ENV" \
               perl -0pi -e '
                 my $cdn  = $ENV{CDN_PREFIX}  // "";
                 my $exts = $ENV{EXT_PATTERN} // "";
+                my $dir  = $ENV{HTML_DIR}    // "";
                 exit 0 unless $cdn && $exts;
 
                 my $pat = qr{(src|href|data-src)=(["\x27])([^"\x27]+\.($exts)(?:[#?][^"\x27]*)?)\2}i;
@@ -309,14 +317,25 @@ jobs:
                 s{$pat}{
                   my ($attr, $q, $path) = ($1, $2, $3);
 
+                  # Absolute URL (has scheme or is protocol-relative) -> leave unchanged
                   if ($path =~ m{^(?:[a-zA-Z][a-zA-Z0-9+.+-]*:|//)}) {
                     "$attr=$q$path$q";
                   } else {
                     my $p = $path;
 
+                    # Strip leading "./"
                     $p =~ s{^\./}{};
-                    $p =~ s{^/+}{};
-                    $p =~ s{^(?:\.\./)+}{};
+
+                    if ($p =~ m{^/}) {
+                      # Root-relative: drop leading slash so it is relative to site/ root
+                      $p =~ s{^/}{};
+                    } else {
+                      # Relative to this HTML file's directory
+                      $p = $dir ? "$dir/$p" : $p;
+                    }
+
+                    # Optionally collapse "foo/../" segments
+                    1 while $p =~ s{[^/]+/\.\./}{};
 
                     "$attr=$q$cdn/$p$q";
                   }
